# event-driven-architecture-poc

./: README.md  load_test.py  main.py  pyproject.toml  ruff.toml  utilities.py
metrics/: cpu_monitor.py  latency_report.py
notify/: listener.py  repository.py  worker.py
output/: cpu_results.txt  latency_report.txt  latency_report2.txt  notify_cpu.csv  polling_cpu.csv
polling/: repository.py  worker.py
sql/notify/: operations.sql  schema.sql
sql/polling/: operations.sql  polling_inserts.sql  schema.sql
