[project]
name = "event-driven-architecture-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity==1.25.1",
    "azure-keyvault-secrets==4.10.0",
    "psycopg2-binary==2.9.11",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
